--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -431,8 +431,6 @@ body:before{content:"";height:100%;float:left;width:0;margin-top:-32767px}*/
 #wrap{width:100%}
 #main{overflow:auto;margin:0 auto;width:1024px;position:relative;background-color:#fff}
 #sticky-footer{position:relative;width:1024px;margin:0 auto 0 auto;height:252px;clear:both}
-
-#edit-address-overlay,#add-address-overlay{display:none}
 body{background-color:#d7dede}
 a.link{color:#000;cursor:pointer}
 a.link:hover{text-decoration:underline}
@@ -518,16 +516,17 @@ input#register-signup-newsletter,input#account-register-signup-newsletter{margin
 #register-newsletter fieldset,#account-register-newsletter fieldset{width:400px;float:left;margin:0;padding:0}
 #members-checkout-delivery,#non-members-checkout-delivery{border-top:dotted 1px #9e9e9e;border-bottom:dotted 1px #9e9e9e;font-size:14px}
 .mem-check-product-info{width:390px;float:left}
-.mem-check-choose-delivery{width:230px;float:left;padding:20px 15px;border-left:solid 1px #9e9e9e;border-right:solid 1px #9e9e9e;height:210px}
-.mem-check-choose-delivery p{clear:both;float:left;padding:20px 15px;width:200px}
-.mem-check-delivery-type{width:262px;padding:33px 0 20px 20px;float:left}
+.mem-check-choose-delivery{width:440px;float:left;padding:20px 15px;border-right:solid 1px #9e9e9e}
+.mem-check-choose-delivery p{clear:both;float:left;width:200px}
+.address-box{margin-left:25px}
+.mem-check-delivery-type {width: 353px;padding: 20px 0 20px 44px;float: left;}
 #members-checkout-delivery .mem-check-delivery-type input,#members-checkout-delivery .mem-check-delivery-type label,#non-members-checkout-delivery .mem-check-delivery-type input,#non-members-checkout-delivery .mem-check-delivery-type label{margin-top:0}
 #members-checkout-delivery .mem-check-delivery-type input[type="radio"],#non-members-checkout-delivery .mem-check-delivery-type input[type="radio"]{margin-top:11px}
 #members-checkout-delivery label,#non-members-checkout-delivery label{clear:none;margin-top:14px;width:auto;margin-bottom:0;margin-left:8px;font-size:14px}
 #members-checkout-delivery input,#non-members-checkout-delivery input{clear:both;margin-top:14px;margin-bottom:0}
 .mem-check-delivery-type textarea{float:left;width:231px;border-color:#ccc;margin:0 0 0 25px;resize:none}
 #members-checkout-delivery .text-button,#non-members-checkout-delivery .text-button{float:left;color:#000;margin-left:25px;font-size:14px}
-#members-checkout-delivery select{width:189px;background-position:-81px 0;margin-left:25px}
+#members-checkout-delivery select {width: 238px;background-position: -33px 0;margin-left: 20px}
 #selected-delivery{margin-bottom:15px}
 #delivery-info-form .yellow-button-wide{margin-bottom:10px;margin-top:10px}
 #delivery-info-form .black-button,#checkout-payment .black-button{margin:24px 0}
@@ -542,7 +541,7 @@ input#register-signup-newsletter,input#account-register-signup-newsletter{margin
 .select-collect{padding-top:20px;float:left}
 #add-address-overlay,#edit-address-overlay{width:1024px;position:relative;left:-45px;top:-19px;z-index:20;background:#f6f6f6;overflow:auto}
 #add-address-overlay input{float:left}
-.add-delivery-address,.edit-delivery-address{overflow:auto;width:400px;margin:0 auto}
+.add-delivery-address,.edit-delivery-address{width:450px;margin:0 auto}
 .delivery-option-description{margin-left:25px}
 #grey-bg-wrapper.white-bg{background:#fff url(../img/ui/white-gradient.png) repeat-x}
 #checkout-payment,#order-confirm{font-size:12px}
@@ -760,7 +759,7 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 .my-account-navigation a{color:#9e9e9e}
 .history-list a.yellow-button{font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
 .rh-wysiwyg{text-align:right}
-#members-checkout-delivery label{width:190px;clear:none}
+#members-checkout-delivery label{width:232px;clear:none}
 @-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}
 }
 html[data-useragent*='MSIE 10.0'] select{background:#ddd none no-repeat -100px 0 !important}
