--- a/templates/xhtml-templates/10.2.9-checkout-order-confirm.html
+++ b/templates/xhtml-templates/10.2.9-checkout-order-confirm.html
@@ -25,13 +25,12 @@
 				<!-- #header -->
 				<div id="content" class="checkout-pages">
 					<div id="ad-title-space">
-						<h1 class="check-page-title">
-							SiS Checkout
+						<h1 class="check-page-title">&nbsp;
+							
 						</h1>
-						<p class="h1-sub-heading grey">Free delivery on all UK orders.</p>
 					</div>
 					<div id="grey-bg-wrapper">
-						<div id="checkout-breadcrumb-menu" class="left grey">Welcome &raquo; Delivery Address &amp; Delivery Options<span class="current black"> &raquo; Payment</span> &raquo; Receipt</div>
+						<div id="checkout-breadcrumb-menu" class="left grey">Welcome &raquo; Delivery Address &amp; Delivery Options &raquo; Payment &raquo; <span class="current black"> Receipt</span> </div>
 						<div id="order-confirm">
 							<div id="order-confirmation-notice" class="clear">
 								<h2>Your Order is Confirmed</h2>
@@ -63,7 +62,7 @@
 								</div>
 							</div>
 							<div id="order-confirm-basket" class="float-right">
-								<h2>Basket</h2>
+								<h2>Order</h2>
 								<div class="check-items-title">
 									<span class="item-title">Product</span>  
 									<span class="quantity-title">Quantity</span> 
@@ -178,7 +177,7 @@
 								</div>
 								<div class="check-total-price">
 									<div class="basket-subtotal-label left-col">
-										Basket Subtotal
+										Order Subtotal
 									</div>
 									<div class="basket-subtotal">
 										<span class="pound">&pound;</span><span class="bold">55.80</span>
