--- a/templates/xhtml-templates/10.2.7-non-member-delivery-option.html
+++ b/templates/xhtml-templates/10.2.7-non-member-delivery-option.html
@@ -26,39 +26,22 @@
 				<div id="content" class="checkout-pages">
 					<div id="ad-title-space">
 						<h1 class="check-page-title">
-							SiS Checkout
+							&nbsp;
 						</h1>
-						<p class="h1-sub-heading grey">Free delivery on all UK orders.</p>
 					</div>
 					<div id="grey-bg-wrapper">
-						<div id="checkout-breadcrumb-menu" class="left grey">Sign in <span class="current black"> &raquo; Delivery Address & Delivery Options</span> &raquo; Payment &raquo; Receipt</div>
+						<div id="checkout-breadcrumb-menu" class="left grey">Sign in <span class="current black"> &raquo; Delivery Address &amp; Delivery Options</span> &raquo; Payment &raquo; Receipt</div>
 						<form id="delivery-info-form" action="">
 							<!--start of delivery options form-->
 							<p class="grey instructions">Please check the details before proceeding</p>
 							<button class="yellow-button-wide" type="submit">Continue Securely</button>
-							<div id="non-members-checkout-delivery">
-								<div class="mem-check-product-info">
-									<div class="check-item-image">
-										<img src="../img/dummy/product.png" alt="Product Image" />
-									</div>
-									<ul class="check-item-item">
-										<li class="check-row-product-name">SIS Rego Rapid Recovery
-										</li>
-										<li class="clear grey">#002962</li>
-									</ul>
-									<ul class="item-quantity-info">
-										<li class="">Quantity: 1</li>
-										<li class="">
-											<button class="remove-button">Remove</button>
-										</li>
-									</ul>
-									<ul class="item-availability">
-										<li>In Stock</li>
-									</ul>
-								</div>
+							<div id="members-checkout-delivery">
+								
 								<div class="mem-check-choose-delivery">
 									<div class="select-deliver">
-										<input type="radio" id="deliver-to" name="deliver-collect" /><label for="deliver-to">Deliver to address:</label>
+										<p class="grey instructions">Please confirm your addresses</p>
+										<div class="clear"></div>
+										<p class="bold near-black">Delivery Address</p>
 										<p class="address-box">Mr George Adroulis<br />
 											RED Technology.com<br />
 											Oakfield Industrial Estate <br />
@@ -70,11 +53,23 @@
 									</div>
 								</div>
 								<div class="mem-check-delivery-type">
-									<input type="radio" id="standard-delivery" name="delivery-type" /><label for="standard-delivery">Standard 3-5 Days (<span class="pound">£</span><span class="pound">3.95</span>)</label>
-									<input type="radio" id="next-day-delivery" name="delivery-type" /><label for="next-day-delivery">Nominated &amp; Next Day (from <span class="pound">£</span><span class="pound">4.95</span>)</label>
+									<p class="grey instructions">Please choose one of the following delivery options</p>
+									
+									<select id="selected-delivery" name="selected-delivery">
+										<option value="address1">Please Select</option>
+										<option value="address1">Standard 3-5 Days (£3.95)</option>
+										<option value="address2">Nominated &amp; Next Day (from £4.95)</option>
+									</select>
+									
+									
+									<div class="clear"></div>
 									<p class="delivery-option-description margin-top-30 left">Information about the selected delivery
 										method will go here. ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 									</p>
+									<div id="delivery-ins">
+										<p class="grey instructions">Delivery Instructions</p>
+										<textarea name="del-ins" cols="20" rows="2"></textarea>
+									</div>
 								</div>
 							</div>
 							<button class="black-button left">Back</button>
