--- a/templates/xhtml-templates/10.2.2-checkout-sign-in.html
+++ b/templates/xhtml-templates/10.2.2-checkout-sign-in.html
@@ -25,8 +25,8 @@
 				<!-- #header -->
 				<div id="content" class="checkout-pages">
 					<div id="ad-title-space">
-						<h1 class="check-page-title">
-							&nbsp;
+						<h1 class="check-page-title">&nbsp;
+							
 						</h1>
 					</div>
 					<div id="grey-bg-wrapper">
@@ -60,6 +60,7 @@
 									<p class="error">Please enter a valid email address</p>
 									<div class="clear"></div>
 									<label for="new-customer-email">Email address</label> <input name="checkout-new-customer-email" type="text"  id="new-customer-email" size="40" maxlength="128" />
+									<label style="width:100%">&nbsp;</label>
 									<div class="clear"></div>
 									
 									<button class="yellow-button" name="login-submit" type="submit">continue</button>
