--- a/templates/xhtml-templates/10.2.4-checkout-register.html
+++ b/templates/xhtml-templates/10.2.4-checkout-register.html
@@ -357,33 +357,55 @@
 									<p class="error">Please type in a postcode/zip code</p>
 									<label for="register-address-postcode">Postcode*</label>
 									<input id="register-address-postcode" type="text" name="register-address-postcode" maxlength="10" />
-									<label for="register-signup-newsletter" class="register-newsletter bold">Would you like to receive our newsletter?</label>
-									<input type="checkbox" class="checkbox" id="register-signup-newsletter" name="register-signup-newsletter" />
-									<div id="register-newsletter" class="newsletter-options">
-										<fieldset>
-											<legend>Age</legend>
-											<label for="age-18-30">18 - 30</label><input type="radio" name="age" value="18-30" id="age-18-30" />
-											<label for="age-31-40">31 - 40</label><input type="radio" name="age" value="31-40" id="age-31-40" />
-											<label for="age-41-50">41 - 50</label><input type="radio" name="age" value="41 - 50" id="age-41-50" />
-											<label for="age-50-plus">50 +</label><input type="radio" name="age" value="50+" id="age-50-plus" />
-										</fieldset>
-										<fieldset>
-											<legend>Goal</legend>
-											<label for="goal-stamina">Stamina</label><input type="radio" name="goal" value="stamina" id="goal-stamina" />
-											<label for="goal-strength">Strength</label><input type="radio" value="strength" name="goal" id="goal-strength" />
-										</fieldset>
-										<fieldset>
-											<legend>Gender</legend>
-											<label for="gender-male">Male</label><input type="radio" name="gender" id="gender-male" value="male" />
-											<label for="gender-female">Female</label><input type="radio" value="female" id="gender-female" name="gender" />
-										</fieldset>
-										<fieldset>
-											<legend>Sport</legend>
-											<label for="sport-boxing">Boxing</label><input type="radio" name="sport-" id="sport-boxing" value="boxing" /> 
-											<label for="sport-cycling">Cycling</label><input type="radio" value="cycling" id="sport-cycling" name="sport" />
-											<label for="sport-other">Other</label><input type="radio" value="cycling" id="sport-other" name="sport" />
-										</fieldset>
-									</div>
+									<div class="clear"></div>
+								<h3>
+									<label for="account-register-signup-newsletter" class="register-newsletter">Would you like to receive our newsletter?</label>
+								</h3>
+								<input type="checkbox" id="account-register-signup-newsletter" name="register-signup-newsletter" checked="checked" />
+								<div id="account-register-newsletter" class="newsletter-options">
+									<fieldset>
+										<legend>Age</legend>
+										<label for="account-age-18-30">18 - 30</label>
+										<input type="radio" name="age" value="18-30" id="account-age-18-30" />
+										<div class="clear"></div>
+										<label for="account-age-31-40">31 - 40</label>
+										<input type="radio" name="age" value="31-40" id="account-age-31-40" />
+										<div class="clear"></div>
+										<label for="account-age-41-50">41 - 50</label>
+										<input type="radio" name="age" value="41 - 50" id="account-age-41-50" />
+										<div class="clear"></div>
+										<label for="account-age-50-plus">50 and above</label>
+										<input type="radio" name="age" value="50+" id="account-age-50-plus" />
+										<div class="clear"></div>
+									</fieldset>
+									<fieldset>
+										<legend>Gender</legend>
+										<label for="account-gender-male">Male</label>
+										<input type="radio" name="gender" id="account-gender-male" value="male" />
+										<div class="clear"></div>
+										<label for="account-gender-female">Female</label>
+										<input type="radio" value="female" id="account-gender-female" name="gender" />
+										<div class="clear"></div>
+									</fieldset>
+									<fieldset>
+										<legend>Sport</legend>
+										<label for="account-sport-running">Running</label>
+										<input type="radio" name="sport" id="account-sport-running" value="running" />
+										<div class="clear"></div>
+										<label for="account-sport-cycling">Cycling</label>
+										<input type="radio" value="cycling" id="account-sport-cycling" name="sport" />
+										<div class="clear"></div>
+										<label for="account-sport-triathalon">Triathlon</label>
+										<input type="radio" name="sport" id="account-sport-triathalon" value="triathalon" />
+										<div class="clear"></div>
+										<label for="account-sport-rowing">Rowing</label>
+										<input type="radio" value="rowing" id="account-sport-rowing" name="sport" />
+										<div class="clear"></div>
+										<label for="account-sport-other">Other</label>
+										<input type="radio" value="cycling" id="account-sport-other" name="sport" />
+										<div class="clear"></div>
+									</fieldset>
+								</div>
 								</div>
 								<div>
 									<p class="dotted-line"></p>
