--- a/templates/xhtml-templates/10.3.2-my-account-forgot-passwd.html
+++ b/templates/xhtml-templates/10.3.2-my-account-forgot-passwd.html
@@ -403,7 +403,7 @@
 						<form action="">
 							<p class="grey instructions">Please enter your email address and we'll send you instructions on how to reset your password.</p>
 							<label for="check-forgot-password-email">Email address:</label>
-							<input  id="check-forgot-password-email" type="text" name="checkout-new-customer-email" size="40" />
+							<input name="checkout-new-customer-email" type="text"  id="check-forgot-password-email" size="40" maxlength="128" />
 							<p class="dotted-line"></p>
 							<button class="yellow-button-wide" name="forgot-password" type="submit">Submit</button>
 							<button class="black-button">Back</button >
