--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -492,7 +492,7 @@ fieldset{border:0}
 #checkout-forgot-password p.error, #checkout-login-signup p.error, #checkout-register-form p.error,#my-account-register-form p.error,#non-member-delivery-form p.error,#members-checkout-delivery p.error,#edit-address-overlay p.error,#add-address-overlay p.error,#my-account-login-signup p.error{padding:0;float:left;margin-bottom:0;margin-left:125px}
 #checkout-login-signup p.error{margin-left:100px!important; width:215px}
 #checkout-forgot-password p.error{margin-left:120px!important; width:215px}
-#checkout-register-form input,#my-account-register-form input,#non-member-delivery-form input,#members-checkout-delivery input,#update-details input,#update-newsletter input,#update-password input,#edit-address-overlay input,#add-address-overlay input,#non-members-checkout-delivery input,#refer-friends input{height:25px;background-color:#ddd;border:1px solid #cacaca;padding:2px;float:left;margin-bottom:15px;width:264px}
+#checkout-register-form input[type=text],#my-account-register-form input,#non-member-delivery-form input,#members-checkout-delivery input,#update-details input,#update-newsletter input,#update-password input,#edit-address-overlay input,#add-address-overlay input,#non-members-checkout-delivery input,#refer-friends input{height:25px;background-color:#ddd;border:1px solid #cacaca;padding:2px;float:left;margin-bottom:15px;width:264px}
 #members-checkout-delivery input[type="radio"],#non-members-checkout-delivery input[type="radio"]{border:0}
 #checkout-register-form button,#non-member-delivery-form button,#members-checkout-delivery button,#non-members-checkout-delivery button{clear:both;float:left}
 #checkout-register-form select,#my-account-register-form select,#non-member-delivery-form select,#members-checkout-delivery select,#add-address-overlay select,#returns-form select,#edit-address-overlay select,#update-details select,#update-newsletter select,#update-password select,#account-add-address-form select,#account-edit-address-form select{float:left;background:transparent;border:0;height:30px;border-radius:0;padding:5px 5px 5px 10px;width:270px;margin-left:1px;background:#ddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0;-webkit-appearance:none;-moz-appearance:none;text-indent:.01px;text-overflow:""}
@@ -760,7 +760,7 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 .history-list a.yellow-button{font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
 .rh-wysiwyg{text-align:right}
 #members-checkout-delivery label{width:232px;clear:none}
-@-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}
-}
+@-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}}
 html[data-useragent*='MSIE 10.0'] select{background:#ddd none no-repeat -100px 0 !important}
 html[data-useragent*='MSIE 10.0'] input[type="checkbox"]{background-color:transparent !important;border:0 !important}
+html[data-useragent*='MSIE 10.0'] input[type="radio"]{background-position: 55px -7px!important}
