--- a/templates/xhtml-templates/10.3.4-my-account-home.html
+++ b/templates/xhtml-templates/10.3.4-my-account-home.html
@@ -415,6 +415,13 @@
 							delivery addresses, review your order history and check on the status of any existing orders, 
 							and view and update your wish list so that you can share your favourite product choices 
 							with friends and relatives. </p>
+							<div id="dup-menu" class="small grey centered bold">
+								<a class="near-black" href="#" title="View your order history">View your order history</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+								<a class="near-black" href="#" title="View your wish list">View your wish list</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+								<a class="near-black" href="#" title="Update your details">Update your details</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+								<a class="near-black" href="#" title="Manage your delivery Addresses">Manage your delivery Addresses</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+								<a class="near-black" href="#" title="Refer a friend">Refer a friend</a>
+							</div>
 					</div>
 				</div>
 				<!-- end of grey bg wrapper-->
