--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -389,7 +389,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .lo-content p{font-size:12px;float:left;clear:both}
 .lo-content h1{margin-left:0}
 .lo-content h4{font-weight:normal;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
-.success{display:none}
+
 #sitemap ul{margin:0;padding:10px 15px;font-size:13px}
 #sitemap ul ul{padding-top:0;padding-bottom:0}
 #sitemap ul li{list-style:none;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;padding-bottom:15px}
@@ -590,7 +590,7 @@ p.check-amounts{text-align:center}
 #account-forgot-password .black-button{float:left;clear:left;margin-top:14px}
 #account-forgot-password .yellow-button-wide{float:right}
 .my-account-navigation{color:#9e9e9e;text-transform:uppercase;list-style-type:none;padding:0;line-height:22px;font-size:12px;margin:30px 0 40px;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
-.account-pages .welcome{width:600px;line-height:23px;color:#9e9e9e}
+.account-pages .welcome{line-height:23px;color:#9e9e9e}
 .account-pages .notification{margin-left:30px}
 #account-home{margin:0 30px}
 .account-pages ._410-15-569.social{padding-left:15px;padding-top:15px;background:#e9e9e9 url(../img/ui/ad-space-gradient.png) repeat-x 0 0;width:auto}
@@ -760,6 +760,8 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 .history-list a.yellow-button{font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif}
 .rh-wysiwyg{text-align:right}
 #members-checkout-delivery label{width:232px;clear:none}
+#dup-menu{margin-top:80px}
+#my-description{line-height:23px; margin-bottom:80px; margin-right:30px}
 @-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}}
 html[data-useragent*='MSIE 10.0'] select{background:#ddd none no-repeat -100px 0 !important}
 html[data-useragent*='MSIE 10.0'] input[type="checkbox"]{background-color:transparent !important;border:0 !important}
