--- a/templates/xhtml-templates/10.3.5-my-account-order-history.html
+++ b/templates/xhtml-templates/10.3.5-my-account-order-history.html
@@ -405,13 +405,9 @@
 						<li><a href="#" title="Manage your delivery Addresses">Manage your delivery Addresses</a></li>
 						<li><a href="#" title="Refer a friend">Refer a friend</a></li>
 					</ul>
-					<p class="notification">You have not placed any orders</p>
-					<!-- pagination -->
-					<div class="prod-list-pagination">
-						<div class="pag-controls small near-black">
-							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
-						</div>
-					</div>
+					<p class="notification red">You have not placed any orders</p>
+					<p id="my-description" class="grey notification">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nulla eros, vulputate eget tincidunt ac, sodales quis sapien. Cras pulvinar felis nec ligula sollicitudin quis imperdiet urna pretium. Maecenas ut mi ac nunc adipiscing ornare ut id purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin facilisis egestas tortor, nec sollicitudin turpis varius in. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin congue tortor ac justo congue eget lacinia elit adipiscing. Mauris pharetra, lorem sed pharetra dictum, velit libero varius ipsum, vel ornare neque orci sagittis nunc. Nunc nec tellus aliquet diam mattis rutrum tristique vel magna. Proin eget ligula nec purus mollis porta. Aenean accumsan tempus porta. Nam porta pharetra feugiat. Aliquam mauris felis, congue nec consequat nec, fermentum ut velit. Suspendisse dolor massa, ornare vel facilisis ut, pulvinar non dui. Fusce sodales dictum suscipit. Morbi aliquam urna ac arcu ornare mollis fringilla massa interdum. Nam euismod purus vitae nunc pulvinar et eleifend lectus pharetra. Aliquam faucibus quam ac sem rhoncus dictum.
+					</p>
 					<div class="history-list">
 						<ul class="order-history-titles">
 							<li class="history-order-number">Order Number</li>
@@ -441,12 +437,7 @@
 							<li class="history-view-button"><a href="#" class="yellow-button">View Order</a></li>
 						</ul>
 					</div>
-					<!-- pagination -->
-					<div class="prod-list-pagination">
-						<div class="pag-controls small near-black">
-							<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> ... <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#" class="pag-next">NEXT</a> </p>
-						</div>
-					</div>
+					
 				</div>
 			</div>
 			<!-- end of grey bg wrapper-->
