--- a/templates/xhtml-templates/10.3.6-my-account-view-order.html
+++ b/templates/xhtml-templates/10.3.6-my-account-view-order.html
@@ -388,7 +388,8 @@
 				<!-- uses html5 search field - might need to add js alternative too -->
 				<input name="search" type="text" value="ENTER KEYWORD OR PRODUCT CODE"  maxlength="50" />
 			</div>
-			<div id="ajax-menu-container"></div><div id="ajax-search-container"></div>
+			<div id="ajax-menu-container"></div>
+			<div id="ajax-search-container"></div>
 		</div>
 		<!-- #header -->
 		
@@ -450,12 +451,44 @@
 							</div>
 							<!-- end check item row -->
 							
+							<div class="check-item-row">
+								<div class="check-item-product"> <img src="../img/dummy/product.png" alt="Product Image" class="med-image" />
+									<ul class="check-item-item">
+										<li class="check-row-product-name">SIS Rego Rapid Recovery</li>
+										<li class="clear grey">#002962</li>
+										<li class="">Selection: <span class="grey clear">1.6kg (6 servings)</span></li>
+										<li class="">Flavour: <span class="grey">Strawberry</span></li>
+									</ul>
+								</div>
+								<div class="check-item-price"> <span class="grey clear"><del><span class="pound">&pound;</span><span class="bold">29.99</span></del></span> <br />
+									<span class="grey clear"><span class="pound">&pound;</span><span class="bold">0.00</span></span> </div>
+								<p class="check-amounts">1 </p>
+								<div class="check-final-price bold"> <span class="pound">&pound;</span><span class="bold">0.00</span> </div>
+							</div>
+							<!-- end check item row -->
+							
+							<div class="check-item-row">
+								<div class="check-item-product"> <img src="../img/dummy/product.png" alt="Product Image" class="med-image" />
+									<ul class="check-item-item">
+										<li class="check-row-product-name">SIS Rego Rapid Recovery</li>
+										<li class="clear grey">#002962</li>
+										<li class="">Selection: <span class="grey clear">1.6kg (6 servings)</span></li>
+										<li class="">Flavour: <span class="grey">Strawberry</span></li>
+									</ul>
+								</div>
+								<div class="check-item-price"> <span class="grey clear"><del><span class="pound">&pound;</span><span class="bold">29.99</span></del></span> <br />
+									<span class="grey clear"><span class="pound">&pound;</span><span class="bold">15.49</span></span> </div>
+								<p class="check-amounts">1 </p>
+								<div class="check-final-price bold"> <span class="pound">&pound;</span><span class="bold">15.49</span> </div>
+							</div>
+							<!-- end check item row -->
+							
 							<div class="check-offer-row">
 								<div class="check-offer-name"> Offer Name </div>
 								<div class="check-discount-amount bold"> <span class="pound">-&pound;</span><span class="bold">20.00</span> </div>
 							</div>
 							<div class="check-total-price">
-								<div class="basket-subtotal-label left-col"> Basket Subtotal </div>
+								<div class="basket-subtotal-label left-col"> Order Subtotal </div>
 								<div class="basket-subtotal bold"> <span class="pound">&pound;</span><span class="bold">55.80</span> </div>
 								<div class="check-delivery-label left-col"> Standard Delivery </div>
 								<div class="delivery-price bold"> <span class="pound">&pound;</span><span class="bold">10.00</span> </div>
@@ -498,7 +531,10 @@
 									</ul>
 								</li>
 							</ul>
-							<p class="return-items"><a href="#" class="black-button"> I would like to return some items</a></p>
+							<div>
+								<button class="black-button left">Back</button>
+							</div>
+							<div class="right"><a href="#" class="black-button"> I would like to return some items</a></div>
 						</div>
 					</div>
 					<!-- end of right column --> 
