--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -657,7 +657,8 @@ p.check-amounts{text-align:center}
 #returns-form li:first-child+li+li p{float:right;text-align:right}
 #returns-form li:first-child+li+li select{float:right;width:100px}
 #returns-form li:first-child+li{text-align:center}
-.wishlist-basket{border-top:1px dotted #9e9e9e;margin:25px 45px;overflow:hidden}
+.wishlist-basket{border-top:1px dotted #9e9e9e;margin:45px;overflow:hidden}
+#account-wishlist-information p{line-height:20px}
 #account-wishlist-information{width:619px;font-size:12px;margin:0 30px}
 #wishlist-to-friend{overflow:auto;width:461px}
 #wishlist-to-friend input{width:300px;float:left}
