--- a/templates/css/ie-7.css
+++ b/templates/css/ie-7.css
@@ -28,3 +28,5 @@
 #related-articles ul,.manage-delivery-titles,#refer-friend-past ul{margin-left:0}
 #account-update .btn-left,#account-update .btn-mid,#account-update .btn-right{left:0!important}
 .ie-no-margin,#items-delivered ul{margin:0}
+#account-update p.error{width:160px!important}
+#account-update {height: 700px!important}
