--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -284,12 +284,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 #search-results-content .article-excerpt{line-height:18px;margin:30px 0}
 .bottom-page-spacer{height:30px}
 #product-container{margin:0 45px 45px 45px}
-#product-container #add-this-component{
-	height: 32px;
-	float: right;
-	margin-top: 40px;
-	width: 184px
-}
+#product-container #add-this-component{height: 32px;float: right;margin-top: 40px;width: 184px}
 #product-container h3{margin:0}
 #product-container .product-top-info{width:55%;float:left;margin-top:30px}
 #product-container .product-top-wysiwyg{width:40%;float:left;text-align:left;margin-top:40px}
@@ -490,6 +485,8 @@ fieldset{border:0}
 #checkout-register-form p,#my-account-register-form p,#my-account-register-form h3,#checkout-register-form h3,#non-member-delivery-form p,#non-member-delivery-form h3{float:left;clear:both}
 #checkout-register-form p,#my-account-register-form p,#non-member-delivery-form p,#add-address-overlay p,#edit-address-overlay p{font-size:12px}
 #checkout-forgot-password p.error, #checkout-login-signup p.error, #checkout-register-form p.error,#my-account-register-form p.error,#non-member-delivery-form p.error,#members-checkout-delivery p.error,#edit-address-overlay p.error,#add-address-overlay p.error,#my-account-login-signup p.error{padding:0;float:left;margin-bottom:0;margin-left:125px}
+#update-password p.error, #update-newsletter p.error{padding:0;float:left;margin-bottom:0;margin-left:125px}
+#update-details p.error{padding:0;float:left;margin-bottom:0;margin-left:105px}
 #checkout-login-signup p.error{margin-left:100px!important; width:215px}
 #checkout-forgot-password p.error{margin-left:120px!important; width:215px}
 #checkout-register-form input[type=text],#my-account-register-form input,#non-member-delivery-form input,#members-checkout-delivery input,#update-details input,#update-newsletter input,#update-password input,#edit-address-overlay input,#add-address-overlay input,#non-members-checkout-delivery input,#refer-friends input{height:25px;background-color:#ddd;border:1px solid #cacaca;padding:2px;float:left;margin-bottom:15px;width:264px}
@@ -497,6 +494,13 @@ fieldset{border:0}
 #checkout-register-form button,#non-member-delivery-form button,#members-checkout-delivery button,#non-members-checkout-delivery button{clear:both;float:left}
 #checkout-register-form select,#my-account-register-form select,#non-member-delivery-form select,#members-checkout-delivery select,#add-address-overlay select,#returns-form select,#edit-address-overlay select,#update-details select,#update-newsletter select,#update-password select,#account-add-address-form select,#account-edit-address-form select{float:left;background:transparent;border:0;height:30px;border-radius:0;padding:5px 5px 5px 10px;width:270px;margin-left:1px;background:#ddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0;-webkit-appearance:none;-moz-appearance:none;text-indent:.01px;text-overflow:""}
 #checkout-register-form label,#non-member-delivery-form label,#members-checkout-delivery label,#add-address-overlay label,#edit-address-overlay label,#non-members-checkout-delivery label,#my-account-register-form label,#update-details label,#update-newsletter label,#update-password label,#account-add-address-form label,#account-edit-address-form label{line-height:31px;height:31px;display:block;float:left;margin-bottom:15px;clear:both;width:125px;font-size:12px}
+#pref-header{}
+#pref-header div{float:left;}
+
+.update-details, .update-details button{width:270px}
+.update-password, .update-password button{width:314px}
+.update-newsletter, .update-newsletter button{width:335px}
+						
 .register-form-your-details{float:left;width:400px;padding:0 30px}
 .register-form-delivery{float:left;padding:0 0 0 30px;border-left:#000 1px dotted;width:400px}
 #checkout-register-form h3,#my-account-register-form h3,#non-member-delivery-form h3{width:379px;margin-bottom:0;font-size:18px}
@@ -666,17 +670,15 @@ p.check-amounts{text-align:center}
 #wishlist-to-friend label{width:154px;clear:both}
 #product-list .get-info{background:transparent;border:0;color:#fff;font-size:13px;line-height:21px}
 #account-wishlist #product-list{margin-left:25px;overflow:hidden;width:980px}
-#update-password{width:303px;float:left;padding:0 5px;border-right:1px solid #9e9e9e}
-#update-password button{width:303px;margin-left:0;margin-top:3px}
-#update-newsletter{width:350px;float:left;padding-left:5px}
-#update-newsletter button{width:350px}
-#update-details{clear:both;float:left;width:259px;margin-left:30px;float:left;padding-right:5px;border-right:1px solid #9e9e9e}
-#update-details button{width:259px}
+.update-password{float:left;padding:0 5px;border-right:1px solid #9e9e9e}
+#update-password button{margin-top:3px}
+.update-newsletter{float:left;padding-left:5px}
+.update-details{clear:both;float:left;margin-left:30px;float:left;padding-right:5px;border-right:1px solid #9e9e9e}
 #update-details input,#update-newsletter input,#update-password input{width:150px}
 #update-details select,#update-newsletter select,#update-password select{width:153px;background-position:top right}
 #update-details input[type="radio"],#update-newsletter input[type="radio"],#update-password input[type="radio"]{width:12px;background-color:transparent;border:0}
-#update-details label{width:95px}
-#account-update form{height:340px}
+#update-details label{width:105px}
+#account-update form{height:476px; position:relative}
 #account-update p{font-size:12px}
 #update-password label{width:110px;padding-left:16px}
 #update-password p{padding-right:15px}
@@ -691,11 +693,11 @@ p.check-amounts{text-align:center}
 #update-newsletter .row-title{height:16px}
 #account-update legend+label{padding-left:0}
 #account-update legend{margin:0;padding:0;font-size:12px;color:#9e9e9e}
-#account-update{position:relative;height:540px}
+#account-update{position:relative;height:550px}
 #account-update .yellow-button{float:left;border-top:dotted #9e9e9e 1px;bottom:0;position:absolute}
-#account-update .btn-left{left:35px}
-#account-update .btn-mid{left:300px}
-#account-update .btn-right{left:618px}
+#account-update .btn-left{left:5px}
+#account-update .btn-mid{left:10px}
+#account-update .btn-right{left:10px}
 #account-update .newsletter-options{margin-left:10px}
 #update-password .yellow-button{margin-top:49px}
 #update-details .yellow-button{margin-top:45px}
