--- a/templates/css/ie-7.css
+++ b/templates/css/ie-7.css
@@ -29,4 +29,7 @@
 #account-update .btn-left,#account-update .btn-mid,#account-update .btn-right{left:0!important}
 .ie-no-margin,#items-delivered ul{margin:0}
 #account-update p.error{width:160px!important}
+#account-add-address-form p.error{width:150px}
 #account-update {height: 700px!important}
+#account-add-address-form input{float:none!important}
+.address-column-right{float:right!important}
