--- a/templates/xhtml-templates/10.3.11-my-account-add-new-del-addr.html
+++ b/templates/xhtml-templates/10.3.11-my-account-add-new-del-addr.html
@@ -417,8 +417,9 @@
 							<div class="address-column-left">
 								<p class="grey bold instructions">Please enter your delivery address</p>
 								<p class="error">Please select a title</p>
-								<label for="non-member-title"> Title</label>
+								<label for="non-member-title"> Title*</label>
 								<select id="non-member-title">
+									<option>Please Select</option>
 									<option>Mr</option>
 									<option>Mrs</option>
 									<option>Miss</option>
@@ -427,16 +428,17 @@
 								<div class="clear"></div>
 								<p class="error"> Please enter a first name</p>
 								<label for="non-member-first-name">First Name*</label>
-								<input id="non-member-first-name" type="text" name="register-first-name"  />
+								<input name="register-first-name" type="text" id="non-member-first-name" maxlength="50"  />
 								<div class="clear"></div>
 								<p class="error"> Please enter a last name</p>
 								<label for="non-member-last-name">Last Name*</label>
-								<input id="non-member-last-name" type="text" name="register-last-name"  />
+								<input name="register-last-name" type="text" id="non-member-last-name" maxlength="50"  />
 								<div class="clear"></div>
 							</div>
 							<!-- end of left address column -->
 							<div class="address-column-right">
 								<p class="error">Please select a country</p>
+								<div class="clear"></div>
 								<label for="non-member-choose-country">Country*</label>
 								<select id="non-member-choose-country" name="register-choose-country">
 									<option value="">Country...</option>
@@ -688,24 +690,28 @@
 									<option value="Zambia">Zambia</option>
 									<option value="Zimbabwe">Zimbabwe</option>
 								</select>
+								<div class="clear"></div>
 								<label for="non-member-company-name">Company Name</label>
-								<input id="non-member-company-name" type="text" name="register-company-name"  />
+								<input name="register-company-name" type="text" id="non-member-company-name" maxlength="40"  />
 								<p class="error">Please enter the first line of your address</p>
+								<div class="clear"></div>
 								<label for="non-member-address-line1">Address Line 1*</label>
-								<input id="non-member-address-line1" type="text" name="register-address-line1"  />
+								<input name="register-address-line1" type="text" id="non-member-address-line1" maxlength="150"  />
 								<label for="non-member-address-line2">Address Line 2</label>
-								<input id="non-member-address-line2" type="text" name="register-address-line2"  />
+								<input name="register-address-line2" type="text" id="non-member-address-line2" maxlength="150"  />
 								<label for="non-member-address-line3">Address Line 3</label>
-								<input id="non-member-address-line3" type="text" name="register-address-line3"  />
+								<input name="register-address-line3" type="text" id="non-member-address-line3" maxlength="150"  />
 								<p class="error">Please enter a town or city </p>
+								<div class="clear"></div>
 								<label for="non-member-town">Town/City*</label>
-								<input id="non-member-town" type="text" name="register-town"  />
+								<input name="register-town" type="text" id="non-member-town" maxlength="150"  />
 								<p class="error">Please enter a county / state</p>
 								<label for="non-member-address-county">County</label>
-								<input id="non-member-address-county" type="text" name="register-address-county" />
+								<input name="register-address-county" type="text" id="non-member-address-county" maxlength="150" />
 								<p class="error">Please type in a postcode / zip code</p>
+								<div class="clear"></div>
 								<label for="non-member-address-postcode">Postcode*</label>
-								<input id="non-member-address-postcode" type="text" name="register-address-postcode" />
+								<input name="register-address-postcode" type="text" id="non-member-address-postcode" maxlength="25" />
 							</div>
 							<!-- end of right address column -->
 							<div>
